# Mouse_LLM_Research

./: .gitignore  Quickstart.html  Quickstart.ipynb  behavior_analysis.py  convert_folder_csv2h5.py  environment.yml  example.env  main.py  pyproject.toml  queries.json  setup.txt  temp_answer.json
data/: camera_1_trial_3_2023-08-30-100947-0000.avi  camera_1_trial_3_2023-08-30-100947-0000.h5
data_configs/: config.yaml
results/: body contraction.txt  body elongation.txt  config.yaml  head rotations.txt  locomotion.txt  rearing.txt  rearing_behavior_analysis.txt
results/examples/: gallery.html
src/amadeus_gpt_testing/utils/: behavior_analysis.py  mouse3D_toh5.py  plot_histograms.py  rename_h5_to_match_avi.py
utils/: csv_to_3d_h5.py  mat2dlc_pickles.py  mouse3D_toh5.py  rename_h5_to_match_avi.py
video_results/: config.yaml
